add extension loading and CollectClockworkExtensionsEvent